--- a/build_scripts/admin/debian_packaging/py_support/debian/changelog
+++ b/build_scripts/admin/debian_packaging/py_support/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-admin (2.0.87+hg040-0~__DIST__0) __DIST__; urgency=low
+
+  * nightly build
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Tue, 21 Aug 2012 23:30:57 +0100
+
+
 openmolar-admin (2.0.86+hg039-0~__DIST__0) __DIST__; urgency=low
 
   * nightly build
