--- a/build_scripts/client/debian_packaging/dh_python2/debian/changelog
+++ b/build_scripts/client/debian_packaging/dh_python2/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-client (2.0.87+hg027-0~__DIST__0) __DIST__; urgency=low
+
+  * nightly build
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Tue, 21 Aug 2012 23:30:55 +0100
+
+
 openmolar-client (2.0.86+hg027-0~__DIST__0) __DIST__; urgency=low
 
   * nightly build
