--- a/build_scripts/server/debian_packaging/py_support/debian/changelog
+++ b/build_scripts/server/debian_packaging/py_support/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-server (2.0.87+hg034-0~__DIST__0) __DIST__; urgency=low
+
+  * nightly build
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Tue, 21 Aug 2012 23:31:01 +0100
+
+
 openmolar-server (2.0.86+hg034-0~__DIST__0) __DIST__; urgency=low
 
   * nightly build
