--- a/build_scripts/admin/debian_packaging/py_support/debian/changelog
+++ b/build_scripts/admin/debian_packaging/py_support/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-admin (2.0.88+hg041-0~__DIST__0) __DIST__; urgency=low
+
+  * upstream release
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Sat, 25 Aug 2012 17:06:31 +0100
+
+
 openmolar-admin (2.0.87+hg040-0~__DIST__0) __DIST__; urgency=low
 
   * nightly build
