--- a/build_scripts/namespace/debian_packaging/py_support/debian/changelog
+++ b/build_scripts/namespace/debian_packaging/py_support/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-namespace (2.0.88-0~__DIST__0) __DIST__; urgency=low
+
+  * upstream release
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Sat, 25 Aug 2012 17:06:17 +0100
+
+
 openmolar-namespace (2.0.87-0~__DIST__0) __DIST__; urgency=low
 
   * nightly build
