--- a/build_scripts/admin/debian_packaging/dh_python2/debian/changelog
+++ b/build_scripts/admin/debian_packaging/dh_python2/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-admin (2.0.89+hg042-0~__DIST__0) __DIST__; urgency=low
+
+  * nightly build
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Mon, 27 Aug 2012 19:29:06 +0100
+
+
 openmolar-admin (2.0.88+hg041-0~__DIST__0) __DIST__; urgency=low
 
   * upstream release
