--- a/build_scripts/client/debian_packaging/dh_python2/debian/changelog
+++ b/build_scripts/client/debian_packaging/dh_python2/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-client (2.0.89+hg028-0~__DIST__0) __DIST__; urgency=low
+
+  * nightly build
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Mon, 27 Aug 2012 19:29:03 +0100
+
+
 openmolar-client (2.0.88+hg027-0~__DIST__0) __DIST__; urgency=low
 
   * upstream release
