--- a/build_scripts/common/debian_packaging/py_support/debian/changelog
+++ b/build_scripts/common/debian_packaging/py_support/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-common (2.0.89+hg049-0~__DIST__0) __DIST__; urgency=low
+
+  * nightly build
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Mon, 27 Aug 2012 19:28:54 +0100
+
+
 openmolar-common (2.0.88+hg048-0~__DIST__0) __DIST__; urgency=low
 
   * upstream release
