--- a/build_scripts/server/debian_packaging/dh_python2/debian/changelog
+++ b/build_scripts/server/debian_packaging/dh_python2/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-server (2.0.89+hg037-0~__DIST__0) __DIST__; urgency=low
+
+  * nightly build
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Mon, 27 Aug 2012 19:29:12 +0100
+
+
 openmolar-server (2.0.88+hg036-0~__DIST__0) __DIST__; urgency=low
 
   * upstream release
