--- a/build_scripts/client/debian_packaging/py_support/debian/changelog
+++ b/build_scripts/client/debian_packaging/py_support/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-client (2.0.900+hg029-0~__DIST__0) __DIST__; urgency=low
+
+  * nightly build
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Tue, 28 Aug 2012 22:34:16 +0100
+
+
 openmolar-client (2.0.89+hg028-0~__DIST__0) __DIST__; urgency=low
 
   * nightly build
