--- a/build_scripts/common/debian_packaging/dh_python2/debian/changelog
+++ b/build_scripts/common/debian_packaging/dh_python2/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-common (2.0.900+hg050-0~__DIST__0) __DIST__; urgency=low
+
+  * nightly build
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Tue, 28 Aug 2012 22:34:14 +0100
+
+
 openmolar-common (2.0.89+hg049-0~__DIST__0) __DIST__; urgency=low
 
   * nightly build
