--- a/build_scripts/server/debian_packaging/py_support/debian/changelog
+++ b/build_scripts/server/debian_packaging/py_support/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-server (2.0.900+hg038-0~__DIST__0) __DIST__; urgency=low
+
+  * nightly build
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Tue, 28 Aug 2012 22:34:24 +0100
+
+
 openmolar-server (2.0.89+hg037-0~__DIST__0) __DIST__; urgency=low
 
   * nightly build
