--- a/build_scripts/admin/debian_packaging/dh_python2/debian/changelog
+++ b/build_scripts/admin/debian_packaging/dh_python2/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-admin (2.0.901+hg043-0~__DIST__0) __DIST__; urgency=low
+
+  * nightly build
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Sat, 08 Sep 2012 10:42:04 +0100
+
+
 openmolar-admin (2.0.900+hg043-0~__DIST__0) __DIST__; urgency=low
 
   * nightly build
