--- a/build_scripts/client/debian_packaging/dh_python2/debian/changelog
+++ b/build_scripts/client/debian_packaging/dh_python2/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-client (2.0.901+hg029-0~__DIST__0) __DIST__; urgency=low
+
+  * nightly build
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Sat, 08 Sep 2012 10:42:00 +0100
+
+
 openmolar-client (2.0.900+hg029-0~__DIST__0) __DIST__; urgency=low
 
   * nightly build
