--- a/build_scripts/common/debian_packaging/dh_python2/debian/changelog
+++ b/build_scripts/common/debian_packaging/dh_python2/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-common (2.0.901+hg052-0~__DIST__0) __DIST__; urgency=low
+
+  * nightly build
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Sat, 08 Sep 2012 10:41:56 +0100
+
+
 openmolar-common (2.0.900+hg050-0~__DIST__0) __DIST__; urgency=low
 
   * nightly build
