--- a/build_scripts/namespace/debian_packaging/dh_python2/debian/changelog
+++ b/build_scripts/namespace/debian_packaging/dh_python2/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-namespace (2.0.901-0~__DIST__0) __DIST__; urgency=low
+
+  * nightly build
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Sat, 08 Sep 2012 10:41:51 +0100
+
+
 openmolar-namespace (2.0.900-0~__DIST__0) __DIST__; urgency=low
 
   * nightly build
