--- a/build_scripts/server/debian_packaging/py_support/debian/changelog
+++ b/build_scripts/server/debian_packaging/py_support/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-server (2.0.901+hg039-0~__DIST__0) __DIST__; urgency=low
+
+  * nightly build
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Sat, 08 Sep 2012 10:42:06 +0100
+
+
 openmolar-server (2.0.900+hg038-0~__DIST__0) __DIST__; urgency=low
 
   * nightly build
