--- a/build_scripts/admin/debian_packaging/dh_python2/debian/changelog
+++ b/build_scripts/admin/debian_packaging/dh_python2/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-admin (2.0.902+hg043-0~__DIST__0) __DIST__; urgency=low
+
+  * upstream release
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Tue, 11 Sep 2012 23:36:40 +0100
+
+
 openmolar-admin (2.0.901+hg043-0~__DIST__0) __DIST__; urgency=low
 
   * nightly build
