--- a/build_scripts/client/debian_packaging/py_support/debian/changelog
+++ b/build_scripts/client/debian_packaging/py_support/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-client (2.0.902+hg029-0~__DIST__0) __DIST__; urgency=low
+
+  * upstream release
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Tue, 11 Sep 2012 23:36:35 +0100
+
+
 openmolar-client (2.0.901+hg029-0~__DIST__0) __DIST__; urgency=low
 
   * nightly build
