--- a/build_scripts/common/debian_packaging/py_support/debian/changelog
+++ b/build_scripts/common/debian_packaging/py_support/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-common (2.0.902+hg052-0~__DIST__0) __DIST__; urgency=low
+
+  * upstream release
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Tue, 11 Sep 2012 23:36:31 +0100
+
+
 openmolar-common (2.0.901+hg052-0~__DIST__0) __DIST__; urgency=low
 
   * nightly build
