--- a/build_scripts/namespace/debian_packaging/py_support/debian/changelog
+++ b/build_scripts/namespace/debian_packaging/py_support/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-namespace (2.0.902-0~__DIST__0) __DIST__; urgency=low
+
+  * upstream release
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Tue, 11 Sep 2012 23:36:22 +0100
+
+
 openmolar-namespace (2.0.901-0~__DIST__0) __DIST__; urgency=low
 
   * nightly build
