--- a/build_scripts/server/debian_packaging/dh_python2/debian/changelog
+++ b/build_scripts/server/debian_packaging/dh_python2/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-server (2.0.902+hg040-0~__DIST__0) __DIST__; urgency=low
+
+  * upstream release
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Tue, 11 Sep 2012 23:36:43 +0100
+
+
 openmolar-server (2.0.901+hg039-0~__DIST__0) __DIST__; urgency=low
 
   * nightly build
