--- a/build_scripts/server/debian_packaging/dh_python2/debian/changelog
+++ b/build_scripts/server/debian_packaging/dh_python2/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-server (2.0.903+hg040-0~__DIST__0) __DIST__; urgency=low
+
+  * nightly build
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Wed, 12 Sep 2012 18:10:10 +0100
+
+
 openmolar-server (2.0.902+hg040-0~__DIST__0) __DIST__; urgency=low
 
   * upstream release
