--- a/TODO.txt
+++ b/TODO.txt
@@ -15,15 +15,6 @@ NEW ISSUES
 
 2012_09_08 - Client Alter/set regular clinicians.
 
-2012_09_08 - Client update clinial memo:
-    this throws an AttributeError
-    'lib_openmolar/client/qt4/interfaces/patient_interface.py', line 450 in load_patient
-    if not self.ok_to_leave_record:
-
-    NB clerical memo works fine!
-
-    "close without saving" doesn't seem to work either!
-
 2012_09_08 - Client and Admin:
     Plugin Directories.
     Let's just go for /etc/share/openmolar/plugins and ~/.openmolar2
@@ -34,9 +25,6 @@ NEW ISSUES
 
 2012_09_08 - Client:
     Set User1 and User2.
-
-2012_09_08 - Client - BPE
-    query needs tweaking.. it doesn't always get the most recent
 
 2012_09_08 - Client - Reception Page
     let's throw up dialogs for take payment and make appointment.
@@ -72,6 +60,19 @@ NEW ISSUES
 ======================================================================
 FIXED ISSUES
 ======================================================================
+2012_09_08 - Client update clinial memo:
+    this throws an AttributeError
+    'lib_openmolar/client/qt4/interfaces/patient_interface.py', line 450 in load_patient
+    if not self.ok_to_leave_record:
+    NB clerical memo works fine!
+    "close without saving" doesn't seem to work either!
+
+    FIXED 2012_09_17. errors were being obscured by a class property
+
+2012_09_08 - Client - BPE
+    query needs tweaking.. it doesn't always get the most recent
+    DONE 2012_09_17
+
 2012_09_08 - Client - TM and AT
     these throw an error 'ChartLineEdit' object has no attribute 'finished_edit'
     DONE 2012_09_12
