--- a/build_scripts/client/debian_packaging/dh_python2/debian/changelog
+++ b/build_scripts/client/debian_packaging/dh_python2/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-client (2.0.904+hg031-0~__DIST__0) __DIST__; urgency=low
+
+  * nightly build
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Wed, 12 Sep 2012 23:56:55 +0100
+
+
 openmolar-client (2.0.903+hg030-0~__DIST__0) __DIST__; urgency=low
 
   * nightly build
