--- a/build_scripts/common/debian_packaging/dh_python2/debian/changelog
+++ b/build_scripts/common/debian_packaging/dh_python2/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-common (2.0.904+hg053-0~__DIST__0) __DIST__; urgency=low
+
+  * nightly build
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Wed, 12 Sep 2012 23:56:45 +0100
+
+
 openmolar-common (2.0.903+hg052-0~__DIST__0) __DIST__; urgency=low
 
   * nightly build
