--- a/build_scripts/namespace/debian_packaging/py_support/debian/changelog
+++ b/build_scripts/namespace/debian_packaging/py_support/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-namespace (2.0.904-0~__DIST__0) __DIST__; urgency=low
+
+  * nightly build
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Wed, 12 Sep 2012 23:56:10 +0100
+
+
 openmolar-namespace (2.0.903-0~__DIST__0) __DIST__; urgency=low
 
   * nightly build
