--- a/build_scripts/server/debian_packaging/py_support/debian/changelog
+++ b/build_scripts/server/debian_packaging/py_support/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-server (2.0.904+hg040-0~__DIST__0) __DIST__; urgency=low
+
+  * nightly build
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Wed, 12 Sep 2012 23:57:09 +0100
+
+
 openmolar-server (2.0.903+hg040-0~__DIST__0) __DIST__; urgency=low
 
   * nightly build
