fixed the treatment model reloading for the client

--- a/build_scripts/namespace/debian_packaging/dh_python2/debian/changelog
+++ b/build_scripts/namespace/debian_packaging/dh_python2/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-namespace (2.0.905-0~__DIST__0) __DIST__; urgency=low
+
+  * nightly build
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Mon, 17 Sep 2012 23:06:27 +0100
+
+
 openmolar-namespace (2.0.904-0~__DIST__0) __DIST__; urgency=low
 
   * nightly build
