--- a/build_scripts/admin/debian_packaging/dh_python2/debian/changelog
+++ b/build_scripts/admin/debian_packaging/dh_python2/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-admin (2.0.905+hg043-0~__DIST__0) __DIST__; urgency=low
+
+  * nightly build
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Mon, 17 Sep 2012 23:06:54 +0100
+
+
 openmolar-admin (2.0.904+hg043-0~__DIST__0) __DIST__; urgency=low
 
   * nightly build
