--- a/build_scripts/client/debian_packaging/py_support/debian/changelog
+++ b/build_scripts/client/debian_packaging/py_support/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-client (2.0.905+hg032-0~__DIST__0) __DIST__; urgency=low
+
+  * nightly build
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Mon, 17 Sep 2012 23:06:41 +0100
+
+
 openmolar-client (2.0.904+hg031-0~__DIST__0) __DIST__; urgency=low
 
   * nightly build
