--- a/build_scripts/client/debian_packaging/py_support/debian/changelog
+++ b/build_scripts/client/debian_packaging/py_support/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-client (2.0.905+hg034-0~__DIST__1) __DIST__; urgency=low
+
+  * quantal build
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Fri, 11 Jan 2013 12:01:13 +0000
+
+
 openmolar-client (2.0.905+hg033-0~__DIST__0) __DIST__; urgency=low
 
   * upstream release
