--- a/build_scripts/common/debian_packaging/dh_python2/debian/changelog
+++ b/build_scripts/common/debian_packaging/dh_python2/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-common (2.0.905+hg055-0~__DIST__1) __DIST__; urgency=low
+
+  * quantal build
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Fri, 11 Jan 2013 12:01:05 +0000
+
+
 openmolar-common (2.0.905+hg053-0~__DIST__0) __DIST__; urgency=low
 
   * nightly build
