--- a/build_scripts/namespace/debian_packaging/py_support/debian/changelog
+++ b/build_scripts/namespace/debian_packaging/py_support/debian/changelog
@@ -1,8 +1,8 @@
 openmolar-namespace (2.0.905-0~__DIST__0) __DIST__; urgency=low
 
-  * nightly build
+  * quantal build
 
- -- Neil Wallace <rowinggolfer@googlemail.com>  Mon, 17 Sep 2012 23:06:12 +0100
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Fri, 11 Jan 2013 11:58:45 +0000
 
 
 openmolar-namespace (2.0.904-0~__DIST__0) __DIST__; urgency=low
