--- a/build_scripts/server/debian_packaging/py_support/debian/changelog
+++ b/build_scripts/server/debian_packaging/py_support/debian/changelog
@@ -1,3 +1,10 @@
+openmolar-server (2.0.906+hg041-0~__DIST__0) __DIST__; urgency=low
+
+  * trial build
+
+ -- Neil Wallace <rowinggolfer@googlemail.com>  Sun, 24 Nov 2013 15:08:04 +0000
+
+
 openmolar-server (2.0.905+hg040-0~__DIST__1) __DIST__; urgency=low
 
   * quantal build
